@@ -42,21 +42,29 @@
 #include <libpq-fe.h>
 #include <vanessa_adt.h>
 
-#define PERDITIONDB_PGSQL_FIELD_DELIMITER  ':'
-#define PERDITIONDB_PGSQL_MAX_SLEEP        1800
-#define PERDITIONDB_PGSQL_DEFAULT_DBHOST   "localhost"
-#define PERDITIONDB_PGSQL_DEFAULT_DBPORT   NULL
-#define PERDITIONDB_PGSQL_DEFAULT_DBNAME   "dbperdition"
-#define PERDITIONDB_PGSQL_DEFAULT_DBTABLE  "tblPerdition"
-#define PERDITIONDB_PGSQL_DEFAULT_DBUSER   "perdition"
-#define PERDITIONDB_PGSQL_DEFAULT_DBPWD    "perdition"
+#define PERDITIONDB_PGSQL_FIELD_DELIMITER   ':'
+#define PERDITIONDB_PGSQL_MAX_SLEEP         1800
+#define PERDITIONDB_PGSQL_DEFAULT_DBHOST    "localhost"
+#define PERDITIONDB_PGSQL_DEFAULT_DBPORT    NULL
+#define PERDITIONDB_PGSQL_DEFAULT_DBNAME    "dbperdition"
+#define PERDITIONDB_PGSQL_DEFAULT_DBTABLE   "tblPerdition"
+#define PERDITIONDB_PGSQL_DEFAULT_DBUSER    "perdition"
+#define PERDITIONDB_PGSQL_DEFAULT_DBPWD     "perdition"
+#define PERDITIONDB_PGSQL_DEFAULT_DBUSERCOL "user"
+#define PERDITIONDB_PGSQL_DEFAULT_DBSRVCOL  "servername"
+#define PERDITIONDB_PGSQL_DEFAULT_DBPORTCOL "port"
 
-#define PERDITIONDB_PGSQL_DBHOST   0
-#define PERDITIONDB_PGSQL_DBNAME   1
-#define PERDITIONDB_PGSQL_DBPORT   2
-#define PERDITIONDB_PGSQL_DBTABLE  3
-#define PERDITIONDB_PGSQL_DBUSER   4
-#define PERDITIONDB_PGSQL_DBPWD    5
+#define PERDITIONDB_PGSQL_DBHOST    0
+#define PERDITIONDB_PGSQL_DBPORT    1
+#define PERDITIONDB_PGSQL_DBNAME    2
+#define PERDITIONDB_PGSQL_DBTABLE   3
+#define PERDITIONDB_PGSQL_DBUSER    4
+#define PERDITIONDB_PGSQL_DBPWD     5
+#define PERDITIONDB_PGSQL_DBSRVCOL  6
+#define PERDITIONDB_PGSQL_DBUSERCOL 7
+#define PERDITIONDB_PGSQL_DBPORTCOL 8
+
+#define PERDITIONDB_PGSQL_QUERY_LENGTH 256
 
 int dbserver_fini(void);
 
